@@ -8,7 +8,7 @@ use inc::Module::Install;
 
 # Definition.
 abstract 'Interface to the Nanjing Metro Map.';
-author 'Michal Spacek <skim@cpan.org>';
+author 'Michal Josef Spacek <skim@cpan.org>';
 author_requires 'English' => 0;
 author_requires 'File::Object' => 0.08;
 author_requires 'Test::More' => 0;
